[package]
name = "digest-access"
version = "0.2.0"
authors = ["David Webb <ravenger@dpwlabs.com>"]
description = "HTTP Digest Access Authentication for Rust"
repository = "https://github.com/RAvenGEr/digest-access"
license = "MIT OR Apache-2.0"
edition = "2018"
categories = ["authentication", "web-programming"]
keywords = ["http", "digest", "digest-access"]
readme = "README.md"

[[bench]]
name = "benchmark"
harness = false


[features]
from-headers = ["http"]

[dependencies]
digest = "0.9"
hex = "0.4"
md-5 = "0.9"
rand = "0.7"
sha2 = "0.9"
http = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.3"