[package]
name = "digest-access"
version = "0.3.2"
authors = ["David Webb <ravenger@dpwlabs.com>"]
description = "HTTP Digest Access Authentication compliant with ITEF RFC2069, RFC2617 and RFC7616 for Rust"
repository = "https://github.com/RAvenGEr/digest-access"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["authentication", "web-programming"]
keywords = ["http", "digest", "digest-access"]
readme = "README.md"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["from-headers"]
from-headers = ["http"]

[dependencies]
digest = "0.10"
hex = "0.4"
md-5 = "0.10"
rand = "0.8"
sha2 = "0.10"
http = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.5"
reqwest = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2.1"
